--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<link rel="stylesheet" href="./src/css/responsive.css" />
 		<title>YR Player</title>
 	</head>
-	<body theme="dark">
+	<body data-theme="dark">
 		<div class="ad-modal">
 			<div class="banner-modal-ad">
 				<div class="banner-modal-ad__content">
@@ -376,7 +376,9 @@
 										<a href="#artist"> Artist </a>
 									</span>
 								</div>
-								<div class="section-content"></div>
+								<div class="section-content swiper-container">
+									<div class="swiper-wrapper"></div>
+								</div>
 							</section>
 						</div>
 					</div>
