--- a/index.html
+++ b/index.html
@@ -294,7 +294,6 @@
 						</ul>
 					</div>
 					<div class="main-page">
-						<!-- Summary -->
 						<div id="summary" class="item item1">
 							<section id="songs" class="item item2">
 								<div class="title">
@@ -378,6 +377,8 @@
 								</div>
 								<div class="section-content swiper-container">
 									<div class="swiper-wrapper"></div>
+									<div class="swiper-button-next"></div>
+									<div class="swiper-button-prev"></div>
 								</div>
 							</section>
 						</div>
