Add Persional Section Handle

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="content">
+				<div class="personal-section">
 					<div class="banner">
 						<img src="./src/img/Logo.png" alt="Avatar" />
 						<div class="info">Yuran</div>
@@ -294,94 +294,84 @@
 						</ul>
 					</div>
 					<div class="main-page">
-						<div id="summary" class="item item1">
-							<section id="songs" class="item item2">
-								<div class="title">
-									<span>
-										<a href="#songs"> Songs </a>
-									</span>
-									<div class="title-right">
-										<div class="upload-song">
-											<i
-												class="
-													bi bi-upload
-													ico ico--click
-												"
-											></i>
+						<section id="songs" class="item item2">
+							<div class="title">
+								<span>
+									<a href="#songs"> Songs </a>
+								</span>
+								<div class="title-right">
+									<div class="upload-song">
+										<i
+											class="bi bi-upload ico ico--click"
+										></i>
 
-											<span>Upload</span>
-										</div>
-										<div class="play-all">
-											<i
-												class="
-													bi bi-play
-													ico ico--click
-												"
-											></i>
-											<span>Play All</span>
-										</div>
+										<span>Upload</span>
+									</div>
+									<div class="play-all">
+										<i
+											class="bi bi-play ico ico--click"
+										></i>
+										<span>Play All</span>
 									</div>
 								</div>
-								<div class="section-content">
-									<div class="img-preview">
-										<img
-											src="./src/img/EdSheeran.png"
-											alt="Shape Of You"
-										/>
-										<img
-											src="./src/img/SummerTime.png"
-											alt="Summer Time"
-										/>
-										<img
-											src="./src/img/SavageLove.png"
-											alt="Savage Love"
-										/>
-										<img
-											src="./src/img/Nevada.png"
-											alt="Nevada"
-										/>
-										<img
-											src="./src/img/ModernTalking.png"
-											alt="Cheri Cheri Lady"
-										/>
-									</div>
-									<div class="song-list">
-										<ul style="width: 100%"></ul>
-									</div>
+							</div>
+							<div class="section-content">
+								<div class="img-preview">
+									<img
+										src="./src/img/EdSheeran.png"
+										alt="Shape Of You"
+									/>
+									<img
+										src="./src/img/SummerTime.png"
+										alt="Summer Time"
+									/>
+									<img
+										src="./src/img/SavageLove.png"
+										alt="Savage Love"
+									/>
+									<img
+										src="./src/img/Nevada.png"
+										alt="Nevada"
+									/>
+									<img
+										src="./src/img/ModernTalking.png"
+										alt="Cheri Cheri Lady"
+									/>
 								</div>
-							</section>
-							<section id="playlist" class="item item3">
-								<div class="title">
-									<span>
-										<a href="#playlist"> Playlist </a>
-									</span>
+								<div class="song-list">
+									<ul style="width: 100%"></ul>
 								</div>
-								<div class="section-content">
-									<div class="new-playlist">
-										<div class="create-btn"></div>
-										<div class="title">
-											Create New Playlist
-										</div>
-									</div>
-									<div class="swiper-container">
-										<div class="swiper-wrapper"></div>
-										<div class="swiper-pagination"></div>
-									</div>
+							</div>
+						</section>
+						<section id="playlist" class="item item3">
+							<div class="title">
+								<span>
+									<a href="#playlist"> Playlist </a>
+								</span>
+							</div>
+							<div class="section-content">
+								<div class="new-playlist">
+									<div class="create-btn"></div>
+									<div class="title">Create New Playlist</div>
 								</div>
-							</section>
-							<section id="artist" class="item item4">
-								<div class="title">
-									<span>
-										<a href="#artist"> Artist </a>
-									</span>
-								</div>
-								<div class="section-content swiper-container">
+								<div class="swiper-container">
 									<div class="swiper-wrapper"></div>
-									<div class="swiper-button-next"></div>
-									<div class="swiper-button-prev"></div>
+									<div class="swiper-pagination"></div>
 								</div>
-							</section>
-						</div>
+							</div>
+						</section>
+						<section id="artist" class="item item4">
+							<div class="title">
+								<span>
+									<a href="#artist"> Artist </a>
+								</span>
+							</div>
+							<div class="section-content swiper-container">
+								<div class="swiper-wrapper"></div>
+								<div class="swiper-button-next"></div>
+								<div class="swiper-button-prev"></div>
+							</div>
+						</section>
 					</div>
 				</div>
 				<div class="to-top">
