--- a/index.html
+++ b/index.html
@@ -83,34 +83,24 @@
 				<nav class="menu">
 					<ul class="list menu-list">
 						<li class="item menu-item active">
-							<a href="#">
-								<i class="bi bi-music-player"></i>
-								<span> Personal </span>
-							</a>
+							<i class="bi bi-music-player"></i>
+							<span> Personal </span>
 						</li>
 						<li class="item menu-item">
-							<a href="#">
-								<i class="bi bi-vinyl"></i>
-								<span> Discover </span>
-							</a>
+							<i class="bi bi-vinyl"></i>
+							<span> Discover </span>
 						</li>
 						<li class="item menu-item">
-							<a href="#">
-								<i class="bi bi-graph-up"></i>
-								<span> Ranking </span>
-							</a>
+							<i class="bi bi-graph-up"></i>
+							<span> Ranking </span>
 						</li>
 						<li class="item menu-item">
-							<a href="#">
-								<i class="bi bi-soundwave"></i>
-								<span> Radio </span>
-							</a>
+							<i class="bi bi-soundwave"></i>
+							<span> Radio </span>
 						</li>
 						<li class="item menu-item">
-							<a href="#">
-								<i class="bi bi-file-post"></i>
-								<span> Following </span>
-							</a>
+							<i class="bi bi-file-post"></i>
+							<span> Following </span>
 						</li>
 					</ul>
 				</nav>
@@ -119,28 +109,20 @@
 					<div class="option-scroll-bar">
 						<ul class="list option-list">
 							<li class="item option-item">
-								<a href="#">
-									<i class="bi bi-music-note-beamed"></i>
-									<span> New Release </span>
-								</a>
+								<i class="bi bi-music-note-beamed"></i>
+								<span> New Release </span>
 							</li>
 							<li class="item option-item">
-								<a href="#">
-									<i class="bi bi-slack"></i>
-									<span> Kind </span>
-								</a>
+								<i class="bi bi-slack"></i>
+								<span> Kind </span>
 							</li>
 							<li class="item option-item">
-								<a href="#">
-									<i class="bi bi-star"></i>
-									<span> Top 100 </span>
-								</a>
+								<i class="bi bi-star"></i>
+								<span> Top 100 </span>
 							</li>
 							<li class="item option-item">
-								<a href="#">
-									<i class="fas fa-folder"></i>
-									<span> MV </span>
-								</a>
+								<i class="fas fa-folder"></i>
+								<span> MV </span>
 							</li>
 						</ul>
 						<div class="banner-modal-ad">
@@ -151,18 +133,12 @@
 						</div>
 						<ul class="list library-list">
 							<li class="item library-item">
-								<a href="#">
-									<i class="bi bi-vinyl-fill"></i>
-									<span> Songs </span>
-								</a>
+								<i class="bi bi-vinyl-fill"></i>
+								<span> Songs </span>
 							</li>
 							<li class="item library-item">
-								<a href="#">
-									<i
-										class="bi bi-file-earmark-music-fill"
-									></i>
-									<span> Playlist </span>
-								</a>
+								<i class="bi bi-file-earmark-music-fill"></i>
+								<span> Playlist </span>
 							</li>
 						</ul>
 					</div>
@@ -276,7 +252,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="personal-section">
+				<!-- Category Items -->
+				<div class="personal-section category-item">
 					<div class="banner">
 						<img src="./src/img/Logo.png" alt="Avatar" />
 						<div class="info">Yuran</div>
@@ -374,6 +351,19 @@
 						</section>
 					</div>
 				</div>
+				<div class="discover category-item"></div>
+				<div class="ranking category-item"></div>
+				<div class="radio category-item"></div>
+				<div class="following category-item"></div>
+
+				<div class="new-release category-item"></div>
+				<div class="kind category-item"></div>
+				<div class="top-100 category-item"></div>
+				<div class="mv category-item"></div>
+
+				<div class="song category-item"></div>
+				<div class="playlist category-item"></div>
+				<!--  -->
 				<div class="to-top">
 					<span class="content">
 						<a href="#top">Top</a>
