--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							</div>
 						</div>
 						<div class="part2">
-							<div class="item">
+							<div class="item theme-ico">
 								<i
 									class="
 										bi bi-circle-square
@@ -235,11 +235,19 @@
 										ico--click
 									"
 								></i>
+								<div class="theme-panel">
+									<div class="theme-item item1">Dark</div>
+									<div class="theme-item item2">Light</div>
+									<div class="theme-item item3">Green</div>
+									<div class="theme-item item4">Blue</div>
+									<div class="theme-item item5">Pink</div>
+									<div class="theme-item item6">Orange</div>
+								</div>
 							</div>
-							<div class="item">
+							<div class="item setting-ico">
 								<i class="bi bi-sliders top-ico ico--click"></i>
 							</div>
-							<div class="item">
+							<div class="item upload-ico">
 								<i class="bi bi-upload top-ico ico--click"></i>
 							</div>
 							<div class="item">
