--- a/index.html
+++ b/index.html
@@ -236,12 +236,24 @@
 									"
 								></i>
 								<div class="theme-panel">
-									<div class="theme-item item1">Dark</div>
-									<div class="theme-item item2">Light</div>
-									<div class="theme-item item3">Green</div>
-									<div class="theme-item item4">Blue</div>
-									<div class="theme-item item5">Pink</div>
-									<div class="theme-item item6">Orange</div>
+									<div class="theme-item item1">
+										<span> Dark </span>
+									</div>
+									<div class="theme-item item2">
+										<span> Light </span>
+									</div>
+									<div class="theme-item item3">
+										<span> Green </span>
+									</div>
+									<div class="theme-item item4">
+										<span> Blue </span>
+									</div>
+									<div class="theme-item item5">
+										<span> Pink </span>
+									</div>
+									<div class="theme-item item6">
+										<span> Orange </span>
+									</div>
 								</div>
 							</div>
 							<div class="item setting-ico">
