--- a/index.html
+++ b/index.html
@@ -262,50 +262,59 @@
 									<ul class="setting-list">
 										<li class="setting-item">
 											<i class="bi bi-slash-circle"></i>
-											Block List
+											<span> Block List </span>
 										</li>
-										<li class="setting-item">
+										<li class="setting-item music-quality">
 											<i class="bi bi-badge-hd"></i>
-											Music Quality
+											<span> Music Quality </span>
 											<div class="quality-panel">
-												<input
-													type="radio"
-													id="SQ"
-													name="quality"
-												/>
-												<label for="SQ">
-													<span> SQ - 128 </span>
-													<p>Info</p>
-												</label>
-												<input
-													type="radio"
-													id="HQ"
-													name="quality"
-												/>
-												<label for="SQ">
-													<span> HQ - 320 </span>
-													<p>Info</p>
-												</label>
+												<div class="quality-item">
+													<input
+														type="radio"
+														id="SQ"
+														name="quality"
+													/>
+													<label for="SQ">
+														<span> SQ - 128 </span>
+														<p>
+															For Slow Connection
+														</p>
+													</label>
+												</div>
+												<div class="quality-item">
+													<input
+														type="radio"
+														id="HQ"
+														name="quality"
+														checked
+													/>
+													<label for="HQ">
+														<span> HQ - 320 </span>
+														<p>Better Quality</p>
+													</label>
+												</div>
 											</div>
 										</li>
 										<li class="setting-item">
 											<i class="bi bi-play-circle"></i>
-											This Player
+											<span> This Player </span>
 										</li>
+										<div class="horizone-line"></div>
 										<li class="setting-item">
 											<i class="bi bi-info-circle"></i>
-											Introduce
+											<span> Introduce </span>
 										</li>
 										<li class="setting-item">
-											<i class="bi bi-flag"></i> Report
+											<i class="bi bi-flag"></i>
+											<span> Report </span>
 										</li>
 										<li class="setting-item">
 											<i class="bi bi-telephone"></i>
-											Contact
+											<span> Contact </span>
 										</li>
 										<li class="setting-item">
 											<i class="bi bi-shield-check"></i>
-											Privacy
+											<span> Privacy </span>
 										</li>
 									</ul>
 								</div>
