--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 						</ul>
 						<div class="banner-modal-ad">
 							Disable Ads and Listen Premium Songs
-							<a class="banner-modal-ad-link" href="#"
-								>Go Premium</a
-							>
+							<a class="banner-modal-ad-link" href="#">
+								<span> Go Premium </span>
+							</a>
 						</div>
 						<ul class="list library-list">
 							<li class="item library-item">
