--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.css"
+		/>
 		<!-- Swiper -->
 		<link
 			rel="stylesheet"
@@ -37,6 +41,7 @@
 		<link rel="stylesheet" href="./src/css/category_sidebar.css" />
 		<link rel="stylesheet" href="./src/css/playlist-sidebar.css" />
 		<link rel="stylesheet" href="./src/css/responsive.css" />
+		<link rel="stylesheet" href="./src/css/animation.css" />
 		<title>YR Player</title>
 	</head>
 	<body data-theme="dark">
@@ -488,17 +493,20 @@
 					<div class="artist">Unknown Artist</div>
 				</div>
 				<div class="media-option">
-					<i class="fas fa-heart ico ico--click"></i>
-					<i class="fas fa-ellipsis-h ico ico--click"></i>
+					<i class="bi bi-heart ico ico--click"></i>
+					<i class="bi-three-dots ico ico--click"></i>
 				</div>
 			</div>
 			<div class="controller">
 				<div class="part1">
-					<i class="fas fa-random ico ico--click"></i>
-					<i class="fas fa-backward ico ico--click"></i>
-					<i class="fas fa-play ico ico--click"></i>
-					<i class="fas fa-forward ico ico--click"></i>
-					<i class="fas fa-redo-alt ico ico--click"></i>
+					<i class="bi bi-shuffle ico ico--click"></i>
+					<i class="bi bi-skip-backward ico ico--click"></i>
+					<div class="play-and-pause">
+						<i class="bi bi-play-circle ico--click"></i>
+						<i class="bi bi-pause ico--click"></i>
+					</div>
+					<i class="bi bi-skip-forward ico ico--click"></i>
+					<i class="bi bi-arrow-repeat ico ico--click"></i>
 				</div>
 				<div class="part2">
 					<div class="left-time">00:00</div>
@@ -517,8 +525,18 @@
 				</div>
 			</div>
 			<div class="player-tools">
-				<i class="fas fa-microphone ico ico--click"></i>
-				<i class="fas fa-volume-up ico ico--click"></i>
+				<i class="bi bi-mic ico ico--click"></i>
+				<i class="bi bi-volume-up ico ico--click">
+					<input
+						id="volume"
+						class="volume ico--click"
+						type="range"
+						value="50"
+						step="2"
+						min="0"
+						max="100"
+					/>
+				</i>
 				<i class="fas fa-volume-mute ico ico--click ico--hide"></i>
 				<div class="vertical-line"></div>
 				<i class="bi bi-music-note-list ico ico--click"></i>
