Add NhacCuTui API CDN

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.css"
 		/>
+		<script src="https://cdn.jsdelivr.net/gh/napthedev/nhaccuatui-api-full@bundle/build/bundle.js"></script>
 		<!-- Swiper -->
 		<link
 			rel="stylesheet"
@@ -543,6 +544,9 @@
 			</div>
 			<audio class="hide now-play"></audio>
 		</div>
+
+		<!-- Nhaccuatui API from https://github.com/napthedev/nhaccuatui-api-full/tree/bundle -->
+		<!-- <script src="https://cdn.jsdelivr.net/gh/napthedev/nhaccuatui-api-full@bundle/build/bundle.js"></script> -->
 		<script src="./src/js/script.js"></script>
 	</body>
 </html>
