--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="./src/img/Logo.png" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap"
-			rel="stylesheet"
-		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -126,7 +120,7 @@
 								<span> Top 100 </span>
 							</li>
 							<li class="item option-item">
-								<i class="fas fa-folder"></i>
+								<i class="bi bi-play-btn"></i>
 								<span> MV </span>
 							</li>
 						</ul>
