--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<input type="text" placeholder="Type Owner Name" />
 					</div>
 					<a class="new-pl-link" href="#">
-						<i class="far fa-plus-square"></i>
+						<i class="bi bi-plus-square"></i>
 						<span> Create Playlist </span>
 					</a>
 				</div>
@@ -140,27 +140,6 @@
 								<span> Playlist </span>
 							</li>
 						</ul>
-					</div>
-					<div
-						class="track-horizontal"
-						style="
-							position: absolute;
-							height: 6px;
-							transition: opacity 200ms ease 0s;
-							opacity: 0;
-						"
-					>
-						<div
-							style="
-								position: relative;
-								display: block;
-								height: 100%;
-								cursor: pointer;
-								border-radius: inherit;
-								background-color: rgba(0, 0, 0, 0.2);
-								width: 0px;
-							"
-						></div>
 					</div>
 				</div>
 				<i
@@ -471,9 +450,259 @@
 				</div>
 			</div>
 			<div class="playlist-sidebar">
-				<div class="top-bar"></div>
-				<div class="now-play"></div>
-				<div class="next-play"></div>
+				<div class="top-bar">
+					<div class="left">
+						<span class="option active">Playlist</span>
+						<span class="option">Recent</span>
+					</div>
+					<div class="right">
+						<i class="bi bi-alarm ico ico--click"></i>
+						<i class="bi bi-three-dots ico ico--click"></i>
+					</div>
+				</div>
+				<div class="content playlist-tab">
+					<div class="now-play">
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Savage Love</div>
+									<div class="song-artist">Jason Derulo</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+					</div>
+					<div class="next-play">
+						<div class="title">
+							<span>Next Song</span>
+						</div>
+						<div class="song-list">
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">Nevada</div>
+										<div class="song-artist">Vicetone</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">Nevada</div>
+										<div class="song-artist">Vicetone</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">
+											Shape Of You
+										</div>
+										<div class="song-artist">
+											Ed Sheeran
+										</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">
+											Cheri Cheri Lady
+										</div>
+										<div class="song-artist">
+											Modern Talking
+										</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">Nevada</div>
+										<div class="song-artist">Vicetone</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">Nevada</div>
+										<div class="song-artist">Vicetone</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">
+											Shape Of You
+										</div>
+										<div class="song-artist">
+											Ed Sheeran
+										</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+							<div class="song-item">
+								<img src="" alt="song img" />
+								<div class="left">
+									<div class="left-content">
+										<div class="song-title">
+											Cheri Cheri Lady
+										</div>
+										<div class="song-artist">
+											Modern Talking
+										</div>
+									</div>
+								</div>
+								<div class="right">
+									<div class="duration">3:00</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="content recent-tab">
+					<div class="song-list">
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Nevada</div>
+									<div class="song-artist">Vicetone</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Nevada</div>
+									<div class="song-artist">Vicetone</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Shape Of You</div>
+									<div class="song-artist">Ed Sheeran</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">
+										Cheri Cheri Lady
+									</div>
+									<div class="song-artist">
+										Modern Talking
+									</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Nevada</div>
+									<div class="song-artist">Vicetone</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Nevada</div>
+									<div class="song-artist">Vicetone</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">Shape Of You</div>
+									<div class="song-artist">Ed Sheeran</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+						<div class="song-item">
+							<img src="" alt="song img" />
+							<div class="left">
+								<div class="left-content">
+									<div class="song-title">
+										Cheri Cheri Lady
+									</div>
+									<div class="song-artist">
+										Modern Talking
+									</div>
+								</div>
+							</div>
+							<div class="right">
+								<div class="duration">3:00</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
