--- a/index.html
+++ b/index.html
@@ -748,19 +748,20 @@
 				</div>
 			</div>
 			<div class="player-tools">
-				<i class="bi bi-mic ico ico--click"></i>
-				<i class="bi bi-volume-up ico ico--click">
-					<input
-						id="volume"
-						class="volume ico--click"
-						type="range"
-						value="50"
-						step="2"
-						min="0"
-						max="100"
-					/>
-				</i>
-				<i class="fas fa-volume-mute ico ico--click ico--hide"></i>
+				<div class="left">
+					<i class="bi bi-mic ico ico--click"></i>
+					<i class="bi bi-volume-up ico ico--click">
+						<input
+							id="volume"
+							class="volume ico--click"
+							type="range"
+							value="50"
+							step="2"
+							min="0"
+							max="100"
+						/>
+					</i>
+				</div>
 				<div class="vertical-line"></div>
 				<i class="bi bi-music-note-list ico ico--click"></i>
 			</div>
