--- a/index.html
+++ b/index.html
@@ -431,7 +431,129 @@
 					</div>
 				</div>
 				<div class="discover category-item"></div>
-				<div class="ranking category-item"></div>
+				<div class="ranking-section category-item">
+					<div class="container">
+						<div class="header">
+							<p class="title">Your Top 5 songs</p>
+							<p class="subtitle">from last 5 days</p>
+						</div>
+						<div class="songs">
+							<div class="itemSong featured">
+								<div class="content">
+									<span class="number">1</span>
+									<figure class="image">
+										<img src="" alt="" />
+									</figure>
+									<div class="info">
+										<div class="text">
+											<p class="title">Break My Heart</p>
+											<p class="artist">Dua Lipa</p>
+										</div>
+										<p class="plays">340</p>
+										<div class="moreInfo">
+											<div class="moreItem">
+												<i class="icon score"></i>
+												<p class="iconLabel">+3</p>
+											</div>
+
+											<div class="counters">
+												<div class="moreItem">
+													<i class="icon heart"></i>
+													<p class="iconLabel">
+														1452
+													</p>
+												</div>
+												<div class="moreItem">
+													<i class="icon play"></i>
+													<p class="iconLabel">
+														5432
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="categories">
+								<p>Songs</p>
+								<p>Plays</p>
+							</div>
+
+							<div class="itemSong list">
+								<div class="content">
+									<span class="number">4</span>
+									<figure class="image">
+										<img src="" alt="" />
+									</figure>
+									<div class="info">
+										<div class="text">
+											<p class="title">Why So Serious</p>
+											<p class="artist">Alice Merton</p>
+										</div>
+
+										<p class="plays">185</p>
+
+										<div class="moreInfo">
+											<div class="moreItem">
+												<i class="icon score"></i>
+												<p class="iconLabel">-2</p>
+											</div>
+
+											<div class="counters">
+												<div class="moreItem">
+													<i class="icon heart"></i>
+													<p class="iconLabel">325</p>
+												</div>
+												<div class="moreItem">
+													<i class="icon play"></i>
+													<p class="iconLabel">
+														2683
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="itemSong list">
+								<div class="content">
+									<span class="number">5</span>
+									<figure class="image">
+										<img src="" alt="" />
+									</figure>
+									<div class="info">
+										<div class="text">
+											<p class="title">Tu Me Regardes</p>
+											<p class="artist">Angèle</p>
+										</div>
+
+										<p class="plays">104</p>
+
+										<div class="moreInfo">
+											<div class="moreItem">
+												<i class="icon score"></i>
+												<p class="iconLabel">-1</p>
+											</div>
+
+											<div class="counters">
+												<div class="moreItem">
+													<i class="icon heart"></i>
+													<p class="iconLabel">238</p>
+												</div>
+												<div class="moreItem">
+													<i class="icon play"></i>
+													<p class="iconLabel">
+														1462
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="radio category-item"></div>
 				<div class="following category-item"></div>
 
@@ -755,7 +877,7 @@
 							id="volume"
 							class="volume ico--click"
 							type="range"
-							value="50"
+							value="100"
 							step="2"
 							min="0"
 							max="100"
