--- a/index.html
+++ b/index.html
@@ -442,12 +442,15 @@
 								<div class="content">
 									<span class="number">1</span>
 									<figure class="image">
-										<img src="" alt="" />
+										<img
+											src="./src/img/SavageLove.png"
+											alt="img"
+										/>
 									</figure>
 									<div class="info">
 										<div class="text">
-											<p class="title">Break My Heart</p>
-											<p class="artist">Dua Lipa</p>
+											<p class="title">Savage Love</p>
+											<p class="artist">Jason Derulo</p>
 										</div>
 										<p class="plays">340</p>
 										<div class="moreInfo">
@@ -481,14 +484,17 @@
 
 							<div class="itemSong list">
 								<div class="content">
-									<span class="number">4</span>
+									<span class="number">2</span>
 									<figure class="image">
-										<img src="" alt="" />
+										<img
+											src="./src/img/Nevada.png"
+											alt="img"
+										/>
 									</figure>
 									<div class="info">
 										<div class="text">
-											<p class="title">Why So Serious</p>
-											<p class="artist">Alice Merton</p>
+											<p class="title">Nevada</p>
+											<p class="artist">Vicetone</p>
 										</div>
 
 										<p class="plays">185</p>
@@ -517,14 +523,58 @@
 							</div>
 							<div class="itemSong list">
 								<div class="content">
-									<span class="number">5</span>
+									<span class="number">3</span>
 									<figure class="image">
-										<img src="" alt="" />
+										<img
+											src="./src/img/ModernTalking.png"
+											alt="img"
+										/>
 									</figure>
 									<div class="info">
 										<div class="text">
-											<p class="title">Tu Me Regardes</p>
-											<p class="artist">Angèle</p>
+											<p class="title">
+												Cheri Cheri Lady
+											</p>
+											<p class="artist">Modern Talking</p>
+										</div>
+
+										<p class="plays">104</p>
+
+										<div class="moreInfo">
+											<div class="moreItem">
+												<i class="icon score"></i>
+												<p class="iconLabel">-1</p>
+											</div>
+
+											<div class="counters">
+												<div class="moreItem">
+													<i class="icon heart"></i>
+													<p class="iconLabel">238</p>
+												</div>
+												<div class="moreItem">
+													<i class="icon play"></i>
+													<p class="iconLabel">
+														1462
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="itemSong list">
+								<div class="content">
+									<span class="number">4</span>
+									<figure class="image">
+										<img
+											src="./src/img/EdSheeran.png"
+											alt="img"
+										/>
+									</figure>
+									<div class="info">
+										<div class="text">
+											<p class="title">Shape Of You</p>
+											<p class="artist">Ed Sheeran</p>
 										</div>
 
 										<p class="plays">104</p>
