--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
 				<div class="ranking-section category-item">
 					<div class="container">
 						<div class="header">
-							<p class="title">Your Top 5 songs</p>
-							<p class="subtitle">from last 5 days</p>
+							<p class="title">Top 100 songs</p>
+							<p class="subtitle">from last 7 days</p>
 						</div>
 						<div class="songs">
 							<div class="itemSong featured">
@@ -939,8 +939,6 @@
 			</div>
 			<audio class="hide now-play"></audio>
 		</div>
-
-		<!-- Nhaccuatui API from https://github.com/napthedev/nhaccuatui-api-full/tree/bundle -->
 		<script src="https://cdn.jsdelivr.net/gh/napthedev/nhaccuatui-api-full@bundle/build/bundle.js"></script>
 		<script src="./src/js/script.js"></script>
 	</body>
