--- a/index.html
+++ b/index.html
@@ -602,6 +602,7 @@
 								</div>
 							</div>
 						</div>
+						<div class="load-remain">Load Top 100</div>
 					</div>
 				</div>
 				<div class="radio category-item"></div>
