--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
 				<div class="ranking-section category-item">
 					<div class="container">
 						<div class="header">
-							<p class="title">Top 100 songs</p>
-							<p class="subtitle">from last 7 days</p>
+							<p class="title">Ranking</p>
+							<p class="subtitle">from last 5 days</p>
 						</div>
 						<div class="songs">
 							<div class="itemSong featured">
@@ -479,7 +479,7 @@
 							</div>
 							<div class="categories">
 								<p>Songs</p>
-								<p>Plays</p>
+								<p>Duration</p>
 							</div>
 
 							<div class="itemSong list">
@@ -521,88 +521,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="itemSong list">
-								<div class="content">
-									<span class="number">3</span>
-									<figure class="image">
-										<img
-											src="./src/img/ModernTalking.png"
-											alt="img"
-										/>
-									</figure>
-									<div class="info">
-										<div class="text">
-											<p class="title">
-												Cheri Cheri Lady
-											</p>
-											<p class="artist">Modern Talking</p>
-										</div>
-
-										<p class="plays">104</p>
-
-										<div class="moreInfo">
-											<div class="moreItem">
-												<i class="icon score"></i>
-												<p class="iconLabel">-1</p>
-											</div>
-
-											<div class="counters">
-												<div class="moreItem">
-													<i class="icon heart"></i>
-													<p class="iconLabel">238</p>
-												</div>
-												<div class="moreItem">
-													<i class="icon play"></i>
-													<p class="iconLabel">
-														1462
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="itemSong list">
-								<div class="content">
-									<span class="number">4</span>
-									<figure class="image">
-										<img
-											src="./src/img/EdSheeran.png"
-											alt="img"
-										/>
-									</figure>
-									<div class="info">
-										<div class="text">
-											<p class="title">Shape Of You</p>
-											<p class="artist">Ed Sheeran</p>
-										</div>
-
-										<p class="plays">104</p>
-
-										<div class="moreInfo">
-											<div class="moreItem">
-												<i class="icon score"></i>
-												<p class="iconLabel">-1</p>
-											</div>
-
-											<div class="counters">
-												<div class="moreItem">
-													<i class="icon heart"></i>
-													<p class="iconLabel">238</p>
-												</div>
-												<div class="moreItem">
-													<i class="icon play"></i>
-													<p class="iconLabel">
-														1462
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
 						</div>
-						<div class="load-remain">Load Top 100</div>
+						<div class="load-remain">Load Top 20</div>
 					</div>
 				</div>
 				<div class="radio category-item"></div>
@@ -610,7 +530,16 @@
 
 				<div class="new-release category-item"></div>
 				<div class="kind category-item"></div>
-				<div class="top-100 category-item"></div>
+				<div class="top-100 category-item">
+					<div class="container">
+						<div class="header">
+							<p class="title">Top 100 songs</p>
+							<p class="subtitle">from last 7 days</p>
+						</div>
+						<div class="songs"></div>
+						<div class="load-remain">Load Top 100</div>
+					</div>
+				</div>
 				<div class="mv category-item"></div>
 
 				<div class="song category-item"></div>
