--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 			</div>
 		</div>
 
+		<div class="uploadUI"></div>
+
 		<div class="main-container">
 			<div class="category-sidebar">
 				<div class="title">
@@ -207,11 +209,7 @@
 						<div class="part2">
 							<div class="icon item theme-ico">
 								<i
-									class="
-										bi bi-circle-square
-										top-ico
-										ico--click
-									"
+									class="bi bi-circle-square top-ico ico--click"
 								></i>
 								<div class="theme-panel">
 									<div class="theme-item item1">
@@ -300,13 +298,14 @@
 							<div class="icon item upload-ico">
 								<input
 									type="file"
+									accept=".mp4, .mp3"
 									name="upload-song"
 									id="upload-song"
+									multiple
 								/>
 								<label for="upload-song">
-									<i
-										class="bi bi-upload top-ico ico--click"
-									></i>
+									<i class="bi bi-upload top-ico ico--click">
+									</i>
 								</label>
 							</div>
 							<div class="item personal-ico">
@@ -347,19 +346,19 @@
 									<div class="upload-song">
 										<input
 											type="file"
+											accept=".mp4, .mp3"
 											name="upload-song"
 											id="upload-song2"
+											multiple
 										/>
 										<label
 											for="upload-song2"
 											class="ico--click"
 										>
 											<i
-												class="
-													bi bi-upload
-													ico ico--click
-												"
-											></i>
+												class="bi bi-upload ico ico--click"
+											>
+											</i>
 											<span>Upload</span>
 										</label>
 									</div>
